Rapid Prd/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Balance Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Follow Up Needed</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_Deadline__c</fullName>
        <label>Case Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Number</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Agent__c</fullName>
        <label>Five9 Agent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9EmailNotificationStatus__c</fullName>
        <label>Five9 Email Notification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Five9__Five9LastEmailMessageId__c</fullName>
        <label>Five9 LastEmailMessageId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ThreadId__c</fullName>
        <formula>&quot;[ ref:_&quot;&amp;LEFT( $Organization.Id , 4)&amp;&quot;0&quot;&amp;RIGHT( $Organization.Id , 4)&amp;&quot;._&quot;&amp;LEFT(Id , 4)&amp;&quot;0&quot;&amp;RIGHT(Id , 5)&amp;&quot;:ref ]&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Five9 ThreadId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Name</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>CustomerService</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Customer Service</label>
        <sharedTo>
            <group>InternalUsersOnly</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ITCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>TECH</value>
        </filters>
        <label>IT Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Pay_off_letter_requests</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.REASON</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>pay off,payoff</value>
        </filters>
        <label>Pay Off Letter Requests</label>
        <sharedTo>
            <group>InternalUsersOnly</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SFEnhancement</fullName>
        <columns>Opportunity__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.REASON</field>
            <operation>equals</operation>
            <value>SalesForce Enhancement</value>
        </filters>
        <label>SF Enhancement</label>
    </listViews>
    <listViews>
        <fullName>x8132007Calls</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>8/13/2007 12:00 AM</value>
        </filters>
        <label>8/13/2007 Calls</label>
    </listViews>
    <listViews>
        <fullName>x8132007Calls_d_2</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>8/10/2007 12:00 AM</value>
        </filters>
        <label>8/13/2007 Calls</label>
    </listViews>
    <recordTypes>
        <fullName>Internal_Inquiry</fullName>
        <active>true</active>
        <businessProcess>Balance Request</businessProcess>
        <label>Internal Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Merchant_Inquiry</fullName>
        <active>true</active>
        <businessProcess>Balance Request</businessProcess>
        <label>Merchant Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Inquiry</fullName>
        <active>true</active>
        <businessProcess>Balance Request</businessProcess>
        <label>Partner Inquiry</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>